--- a/index.html
+++ b/index.html
@@ -11,15 +11,18 @@
       <h1>css flexbox photo gallery</h1>
     </header>
     <div class="gallery">
-      <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/1.jpg">
-      <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/2.jpg">
-      <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/3.jpg">
-      <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/4.jpg">
-      <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/5.jpg">
-      <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/6.jpg">
-      <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/7.jpg">
-      <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/8.jpg">
-      <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/9.jpg">
+      <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/1.jpg" alt="gato dormindo">
+      <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/2.jpg" alt="gato de ponta cabeça">
+      <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/3.jpg" alt="gato pensativo">
+      <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/4.jpg" alt="gato dormindo">
+      <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/5.jpg" alt="gato filhote branco">
+      <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/6.jpg" alt="gatos irmãos">
+      <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/7.jpg" alt="gato no esconderijo">
+      <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/8.jpg" alt="gato de olhar penetrante">
+      <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/9.jpg" alt="gatos preto e branco">
+    </div>
+  </body>
+</html>
     </div>
   </body>
 </html>
